...
                .padding(.bottom, 20)
            Divider()
                .padding(.bottom, 20)
            Button(action: {
                isEditing = true
            }) {
                Text("Edit")
                    .padding()
                    .frame(maxWidth: .infinity)
                    .background(Color.blue)
                    .foregroundColor(.white)
                    .cornerRadius(10)
                    .font(.headline)
...
                }
                .padding(.vertical, 10)
            }
            Button(action: {
                isEditing = false
            }) {
                Text("Save")
                    .padding()
                    .frame(maxWidth: .infinity)
                    .background(Color.blue)
                    .foregroundColor(.white)
                    .cornerRadius(10)
                    .font(.headline)
...
