//
//  SwiftUIView.swift
//  
//
//  Created by Jiahui Chen  on 2/6/23.
//

import Foundation
import SwiftUI

enum DefaultSettings {
    // Color Slider Values
    static var rValue: Double = 30.0
    static var gValue: Double = 200.0
    static var bValue: Double = 255.0
    
    // Profile
    static var name: String = "Jiahui Chen"
    static var subtitle: String = "Patient at University of Utah Hospital"
    static var description: String = ""
}
